# data-engineer-agent-with-crewai

./: README.md  pyproject.toml  requirements.txt
src/data_engineer_agent/: crew.py  main.py
src/data_engineer_agent/config/: agents.yaml  tasks.yaml
src/my_ai/: crew.py  main.py
