[project]
name = "my_ai"
version = "0.1.0"
description = "my-ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3"
]

[project.scripts]
my_ai = "my_ai.main:run"
run_crew = "my_ai.main:run"
train = "my_ai.main:train"
replay = "my_ai.main:replay"
test = "my_ai.main:test"
run_with_trigger = "my_ai.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
