[project]
name = "data_engineer_agent"
version = "0.1.0"
description = "data-engineer-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3",
    "fastapi[standard]>=0.134.0",
    "litellm>=1.75.3",
]

[project.scripts]
data_engineer_agent = "data_engineer_agent.main:run"
run_crew = "data_engineer_agent.main:run"
train = "data_engineer_agent.main:train"
replay = "data_engineer_agent.main:replay"
test = "data_engineer_agent.main:test"
run_with_trigger = "data_engineer_agent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
